<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>lan.chaos</groupId>
    <artifactId>jdk8-platform</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <modules>
        <module>jdk8-common</module>
        <module>jdk8-mapstruct-demo</module>
        <module>jdk8-mybatis-plus-demo</module>
        <module>jdk8-nacos-demo</module>
        <module>jdk8-redis-demo</module>
        <module>jdk8-mq</module>
        <module>jdk8-localcache-demo</module>
        <module>jdk8-seata-demo</module>
        <module>jdk8-sentinel-demo</module>
        <module>jdk8-elasticsearch-demo</module>
        <module>jdk8-seckill-demo</module>
        <module>jdk8-short-link-demo</module>
        <module>jdk8-base</module>
        <module>jdk8-testing-demo</module>
        <module>jdk8-serialization-demo</module>
        <module>jdk8-scheduler-demo</module>
        <module>jdk8-crypto-demo</module>
        <module>jdk8-security-demo</module>
        <module>jdk8-zookeeper-demo</module>
        <module>jdk8-microservice-demo</module>
        <module>jdk8-starter-demo</module>
        <module>jdk8-ratelimiter-demo</module>
        <module>jdk8-batch-ingest-demo</module>
        <module>jdk8-servlet-filter-async-demo</module>
        <module>jdk8-webflux-demo</module>
        <module>jdk8-tech</module>
        <module>jdk8-office-tech</module>
        <module>jdk8-game-leaderboard-demo</module>
        <module>jdk8-tools</module>
    </modules>

    <properties>
        <!-- 1. 项目基础信息 -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>

        <!-- 2. Java 版本配置（JDK 8 专用，不配置 release） -->
        <java.version>1.8</java.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>

        <!-- 3. 统一版本管理（所有依赖和插件版本集中在此） -->
        <!-- Spring 生态核心 -->
        <spring-boot.version>2.7.18</spring-boot.version>
        <spring-cloud.version>2021.0.9</spring-cloud.version>
        <spring-cloud-alibaba.version>2021.0.6.2</spring-cloud-alibaba.version>

        <!-- 常用第三方组件 -->
        <druid.version>1.2.23</druid.version>
        <mybatis-plus.version>3.5.17</mybatis-plus.version>
        <hutool.version>5.8.46</hutool.version>
        <guava.version>33.6.0-jre</guava.version>
        <lombok.version>1.18.46</lombok.version>
        <caffeine.version>2.9.3</caffeine.version>

        <!-- Office 文档处理专题（jdk8-office-tech：Excel / Word / PDF 导入导出） -->
        <!-- POI：4.0.1 起要求 Java 8+，5.5.1 是 JDK8 可用的最新版（POI 6 尚未 GA） -->
        <poi.version>5.5.1</poi.version>
        <!-- EasyExcel 4.0.3 是最新版，其传递依赖是 POI 5.2.5，必须由本 BOM 统一收敛到 ${poi.version} -->
        <easyexcel.version>4.0.3</easyexcel.version>
        <!-- PDFBox 3.0.x 支持 Java 8（4.0 起要求 Java 11）；版本与 POI 5.5.1 的 optional 依赖对齐 -->
        <pdfbox.version>3.0.6</pdfbox.version>

        <!-- Maven 插件版本 -->
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
        <maven-surefire-plugin.version>3.2.2</maven-surefire-plugin.version>
        <maven-source-plugin.version>3.3.0</maven-source-plugin.version>

        <!-- 测试分层（统一收口）：surefire 包含/排除与 failsafe 版本 -->
        <maven-failsafe-plugin.version>3.2.2</maven-failsafe-plugin.version>
        <surefire.include1>**/*Test.java</surefire.include1>
        <surefire.include2>**/*Tests.java</surefire.include2>
        <!-- 压测类默认不进 mvn test，仅 -Pstress 运行 -->
        <bench.exclude>**/*Bench.java</bench.exclude>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Spring Boot BOM -->
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud BOM（显式引入，确保 OpenFeign 等版本对齐） -->
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Spring Cloud Alibaba BOM -->
            <dependency>
                <groupId>com.alibaba.cloud</groupId>
                <artifactId>spring-cloud-alibaba-dependencies</artifactId>
                <version>${spring-cloud-alibaba.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

            <!-- Druid 连接池 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>druid-spring-boot-starter</artifactId>
                <version>${druid.version}</version>
            </dependency>

            <!-- MyBatis Plus -->
            <dependency>
                <groupId>com.baomidou</groupId>
                <artifactId>mybatis-plus-boot-starter</artifactId>
                <version>${mybatis-plus.version}</version>
            </dependency>

            <!-- Hutool 工具库 -->
            <dependency>
                <groupId>cn.hutool</groupId>
                <artifactId>hutool-all</artifactId>
                <version>${hutool.version}</version>
            </dependency>

            <!-- Guava 工具库 -->
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>

            <!-- Lombok -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>

            <!-- Caffeine 本地缓存（JDK8 用 2.x；JDK11+ 才用 3.x） -->
            <dependency>
                <groupId>com.github.ben-manes.caffeine</groupId>
                <artifactId>caffeine</artifactId>
                <version>${caffeine.version}</version>
            </dependency>

            <!-- ===== Office 文档处理（jdk8-office-tech）===== -->
            <!-- Apache POI：Excel/Word/PPT 读写。注意 poi-ooxml 5.4+ 默认只带 poi-ooxml-lite，
                 用到图表/绘图等完整 OOXML schema 时需显式替换成 poi-ooxml-full -->
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.poi</groupId>
                <artifactId>poi-ooxml-full</artifactId>
                <version>${poi.version}</version>
            </dependency>
            <!-- EasyExcel：阿里基于 POI 的流式封装。Spring Boot BOM 不管 POI，
                 故必须在此锁版本，否则 EasyExcel 传递的 POI 5.2.5 与直接引入的 5.5.1 会二选一 -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>easyexcel</artifactId>
                <version>${easyexcel.version}</version>
            </dependency>
            <!-- Apache PDFBox：PDF 生成/解析/合并（P2 使用） -->
            <dependency>
                <groupId>org.apache.pdfbox</groupId>
                <artifactId>pdfbox</artifactId>
                <version>${pdfbox.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <source>${maven.compiler.source}</source>
                        <target>${maven.compiler.target}</target>
                        <encoding>${project.build.sourceEncoding}</encoding>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                        </annotationProcessorPaths>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <includes>
                            <include>${surefire.include1}</include>
                            <include>${surefire.include2}</include>
                        </includes>
                        <!-- 压测类（*Bench / BenchMarkTest）默认不进 mvn test，仅 -Pstress 运行 -->
                        <excludes>
                            <exclude>${bench.exclude}</exclude>
                            <exclude>**/BenchMarkTest.java</exclude>
                        </excludes>
                    </configuration>
                </plugin>

                <!-- 集成测试：*IT / *IntegrationTest，在 mvn verify 阶段由 failsafe 执行 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${maven-failsafe-plugin.version}</version>
                    <configuration>
                        <includes>
                            <include>**/*IT.java</include>
                            <include>**/*IntegrationTest.java</include>
                        </includes>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>${maven-source-plugin.version}</version>
                    <executions>
                        <execution>
                            <id>attach-sources</id>
                            <goals>
                                <goal>jar</goal>
                            </goals>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>

        <!-- failsafe 绑定到 verify 生命周期，继承上方 pluginManagement 配置 -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <executions>
                    <execution>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <!-- 压测专用：只跑 *Bench / BenchMarkTest，其余单测让位 -->
        <profile>
            <id>stress</id>
            <properties>
                <surefire.include1>**/*Bench.java</surefire.include1>
                <surefire.include2>**/BenchMarkTest.java</surefire.include2>
                <bench.exclude>**/NoSuchBench.java</bench.exclude>
            </properties>
        </profile>
    </profiles>
</project>
